# swt-todo-list-app

./: README.md  compose.dev.yml  compose.yml
backend/: .dev.env  .gitignore  .prod.env  Dockerfile  Dockerfile.dev  db_psycopg.py  db_sqlmodel.py  pyproject.toml
backend/src/: main.py
backend/src/controller/: todo_item_controller.py  todo_list_controller.py  user_controller.py  ws_controller.py
backend/src/core/: base_service.py  database.py  database_wrapper.py  jwt.py  logger.py  websocket.py
backend/src/core/middleware/: authentication.py
backend/src/dto/: request_dtos.py  response_dtos.py
backend/src/model/: role.py  tag.py  tag_category.py  todo_item.py  todo_item_assignee.py  todo_item_comment.py  todo_item_tag.py  todo_list.py  todo_list_member.py  todo_list_role.py  todo_list_tag.py  user.py
backend/src/service/: authentication_service.py  base_service.py  todo_item_service.py  todo_list_service.py  user_service.py
database/: .dev.env  .prod.env
database/migration/: Dockerfile
database/migration/sql/: V0__initial.sql
frontend/: .dockerignore  .gitignore  .prettierrc.mjs  Dockerfile  Dockerfile.dev  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
frontend/src/: ThemeSwitch.astro
frontend/src/http-actions/: todoActions.ts  userActions.ts
frontend/src/layout/: BaseLayout.astro  Footer.astro  NavBar.astro
frontend/src/pages/: index.astro
frontend/src/state/: activeState.ts  todoItemState.ts  todoListState.ts  userState.ts
frontend/src/util/: dialogUtil.ts  httpUtil.ts
frontend/src/web-sockets/: todoWs.ts
(+30 files in other folders)
